2013-04-15 Type-Tiny version 0.001 released!

 - Contains over 2000 lines of code, over 3000 lines of documentation,
   and over 650 tests.

2013-05-06 Type-Tiny version 0.004 released!

 - Contains over 3500 lines of code, over 5000 lines of documentation,
   and over 1000 tests.
 - Improved manual.
 - Many improvements to coercions:
    - can be made immutable
    - can be added to type libraries as standalone coercions
    - overload "+"
    - "deep" coercions
    - parameterizable coercions
 - Type::Params is a new module providing ultra-fast parameter checking for
   subroutines
 - Exporter::TypeTiny pulls all the weird exporting code from various
   modules together into one place
 - Eval::TypeTiny pulls all the weird string evaluation from various
   modules together into one place
 - OptList, Bytes and Chars types added to Types::Standard
 - MkOpt, Encode, Decode, Join and Split coercions added to Types::Standard
 - Better Mouse support.
 - Types::TypeTiny::to_TypeTiny is able to built a type constraint from
   Validation::Class::Simple