@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Params::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Params::VERSION   = '0.005_03';
+	$Type::Params::VERSION   = '0.005_04';
 }
 
 use B qw(perlstring);
